add react-native expo install instructions for windows10 and other changes